# termstorage

./: Cargo.toml  README.md
src/: main.rs  protocol.rs  term.rs
src/termstorage-client/: Cargo.toml
src/termstorage-client/src/: lib.rs
src/termstorage-encoding/: Cargo.toml
src/termstorage-encoding/src/: lib.rs
src/termstorage-protocol/: Cargo.toml
src/termstorage-protocol/src/: lib.rs  response.rs
src/termstorage-server/: Cargo.toml
src/termstorage-server/src/: lib.rs  main.rs
src/termstorage-term/: Cargo.toml
src/termstorage-term/src/: lib.rs
