[package]
name = "termstorage-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termstorage-protocol = { path = "../termstorage-protocol" }
termstorage-encoding = { path = "../termstorage-encoding" }
